Fixed wrap.

--- a/style/grid.less
+++ b/style/grid.less
@@ -26,7 +26,6 @@
     .col-11,
     .col-12 {
         width: calc(100% - 10px);
-        margin-bottom: 20px;
     }
 }
 
@@ -39,7 +38,6 @@
 
 .row {
   display: flex;
-  flex-wrap: wrap;
   margin-left: -1em;
   margin-right: -1em;
   margin-top: 10px;
